tests/sumo/devices/rerouting/assignment/errors/taz_disconnect_ignore/errors.sumo
Warning: No connection between edge '2-source' and edge '1-sink' found.
Warning: No route for vehicle '0' found.
Warning: Removing vehicle '0' which has no valid route.
